fix dashboard spacing

--- a/src/components/features/entity/creator/styles.css
+++ b/src/components/features/entity/creator/styles.css
@@ -1,3 +1,7 @@
+:host {
+  display: contents;
+}
+
 .create-form {
   display: flex;
   flex-direction: column;
